--- a/pipelines.resources_go.yml
+++ b/pipelines.resources_go.yml
@@ -1,6 +1,6 @@
 resources:
-  - name: conan_lhci
+  - name: go_lhci
     type: GitRepo
     configuration:
       gitProvider: hemanth_personal            # Change to your integration
-      path: hemanthjfrog/conan-clone                # Change to your repo
+      path: hemanthjfrog/lhci-pipeline               # Change to your repo
