--- a/pipelines.resources_conan.yml
+++ b/pipelines.resources_conan.yml
@@ -1,5 +1,5 @@
 resources:
-  - name: conan_lhci
+  - name: conan_lh
     type: GitRepo
     configuration:
       gitProvider: hemanth_personal            # Change to your integration
