--- a/pipelines.steps_conan.yml
+++ b/pipelines.steps_conan.yml
@@ -6,9 +6,9 @@ pipelines:
         configuration:
           environmentVariables:
               LHCI_BUILD_CONTEXT__EXTERNAL_BUILD_URL: "$step_url"
-              LHCI_BUILD_CONTEXT__CURRENT_BRANCH: "$res_conan_lhci_branchName"
+              LHCI_BUILD_CONTEXT__CURRENT_BRANCH: "$res_conan_lh_branchName"
           inputResources:
-            - name: conan_lhci
+            - name: conan_lh
           runtime:
             type: image
             image:
@@ -20,7 +20,7 @@ pipelines:
           onStart:
             - echo "Executing LHCI in container"
           onExecute:
-            - cd $res_conan_lhci_resourcePath/
+            - cd $res_conan_lh_resourcePath/
             - lhci autorun
           onComplete:
             - add_run_files .lighthouseci lhci_report
