--- a/pipelines.steps_go.yml
+++ b/pipelines.steps_go.yml
@@ -1,5 +1,5 @@
 pipelines:
-  - name: pipeline_center_tests
+  - name: pipeline_go_center_tests
     steps:
       - name: exec_lhci
         type: Bash
@@ -18,7 +18,7 @@ pipelines:
                 autoPull: true        # default true; pulls image before runx
         execution:
           onStart:
-            - echo "Executing LHCI in container"
+            - echo "Executing LHCI in container for GoCenter"
           onExecute:
             - cd $res_go_lh_resourcePath/
             - lhci autorun
